# ctu_mars_control_unit

./: README.md  pyproject.toml
.github/workflows/: static_code_analysis_and_tests.yml
