[project]
name = "ctu_mars_control_unit"
version = "0.1.0"
description = "MARS control unit that is used to control robots at CIIRC/CTU"
authors = [
    { name = "Vladimir Petrik", email = "vladimir.petrik@cvut.cz" },
]
dependencies = [
    "pyserial>=3.5",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "BSD 3-Clause" }

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.10.1",
    "ruff>=0.1.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.scripts.lint]
shell = """
    ruff check src tests
    black --check --diff --verbose src tests
"""

[tool.pdm.scripts.format]
shell = """
    black src tests
"""
